# xfily

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: static.yml
src/: convert_image.rs  index.tsx  main.rs
src/pages/: App.tsx  ConvertImage.tsx  Home.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
